--- a/Public/Css/carrito.css
+++ b/Public/Css/carrito.css
@@ -139,3 +139,37 @@ body {
     font-size: 16px;
     cursor: pointer;
 }
+
+
+
+.cart-item {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.cart-item img {
+    width: 80px;
+    height: auto;
+}
+
+.controls {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.controls button {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.delete {
+    background: none;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+}
